# Web-Development-Projects

./: Untitled-2025-08-09-1405.excalidraw  ck --lost-found
(HTML)(CSS)/: Untitled-2025-08-09-1405.excalidraw  agent.excalidraw
Amazon Clone/: index.html
CSS/: index.html
Day 12/: style.css
Day 13 Spotify Clone/: index.html  style.css
Day 15/: app.js  index.html
Day 16/: app.js
Day 17/: Q2.html  Q2.js  app.js
Music Player/: app.js  index.html
Portfolio/: style.css
React/01_First_Rag_System/backend/: 03_ReAct_Agent.py  README.md  Requirements.txt  create_test_document.py  main.py  pyproject.toml  rag_agent.py  run.py
React/01_First_Rag_System/backend/app/: config.py  main.py
React/01_First_Rag_System/backend/app/api/: chat.py  deps.py  documents.py  settings.py
React/01_First_Rag_System/backend/app/core/: agent.py
React/01_First_Rag_System/backend/app/models/: __init__.py  schemas.py
React/01_First_Rag_System/backend/chroma_db/: chroma.sqlite3
React/04_Linkedin_Descrption_Writer/backend/: 01_simple_Chat_Bot_Streaming.py  config.py  main.py  pyproject.toml  requirements.txt
React/04_Linkedin_Descrption_Writer/backend/routes/: generate.py
React/04_Linkedin_Descrption_Writer/backend/schemas/: description.py
React/04_Linkedin_Descrption_Writer/backend/services/: text_generator.py
React/07_HyDE RAG/backend/: README.md  pyproject.toml  requirements.txt
React/07_HyDE RAG/backend/routes/: __init__.py  chat.py  health.py  upload.py
React/07_HyDE RAG/backend/schemas/: chat.py
React/07_HyDE RAG/backend/services/: document.py  state.py
React/Student To Do list/backend/: main.py  pyproject.toml  requirements.txt  student_todo.db
React/Student To Do list/backend/app/: config.py  database.py  main.py
React/Student To Do list/backend/app/models/: __init__.py  daily_stats.py  todo.py  user_settings.py
React/Student To Do list/backend/app/routers/: __init__.py  settings.py  stats.py  todos.py
React/Student To Do list/backend/app/schemas/: __init__.py  daily_stats.py  todo.py  user_settings.py
React/Student To Do list/backend/app/services/: __init__.py  streak_service.py
(+504 files in other folders)
