[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "ipython>=9.9.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.7",
    "pydantic>=2.12.5",
    "pypdf>=6.6.2",
    "uvicorn>=0.40.0",
]
